# hscpp

./: .gitignore  CMakeLists.txt  LICENSE.txt  README.md  hotswap-cpp.sln  hotswap-cpp.vcxproj  hotswap-cpp.vcxproj.filters
docs/: 1_how-it-works.md  2_hotswapper-basics.md  3_simple-hotswappable-class.md  4_global-user-data.md  5_manage-state-between-swaps.md  6_custom-memory-allocator.md  7_preprocessor-requires.md  8_preprocessor-language.md  9_dependent-compilation.md  README.md
examples/: CMakeLists.txt  hscpp-examples.sln
examples/dependent-compilation-demo/: CMakeLists.txt
examples/dependent-compilation-demo/include/dependent-compilation-demo/: Printer2.h  StringUtil.h
examples/dependent-compilation-demo/src/: Main.cpp  MathUtil.cpp  MathUtilExtra.cpp  Printer1.cpp  Printer2.cpp  StringUtil.cpp
examples/dependent-compliation-demo/: Main.cpp  MathUtil.cpp  MathUtil.h  MathUtilExtra.cpp  Printer1.cpp  Printer1.h  Printer2.cpp  StringUtil.cpp  StringUtil.h  dependent-compliation-demo.vcxproj  dependent-compliation-demo.vcxproj.filters
examples/hscpp-example-utils/: CMakeLists.txt  hscpp-example-utils.vcxproj  hscpp-example-utils.vcxproj.filters
examples/hscpp-example-utils/include/hscpp-example-utils/: GetMemory.h  IMemoryManager.h  MemoryManager.h  Ref.h  Variant.h
examples/hscpp-example-utils/src/: GetMemory.cpp  MemoryManager.cpp  Variant.cpp
examples/imgui-demo/: CMakeLists.txt  Globals.h  Main.cpp  Widget.cpp  Widget.h  imgui-demo.vcxproj  imgui-demo.vcxproj.filters  imgui.ini
examples/imgui-demo/include/imgui-demo/: Widget.h
examples/imgui-demo/lib/: CMakeLists.txt
examples/imgui-demo/lib/gl3w/: CMakeLists.txt
examples/imgui-demo/src/: Main.cpp  Widget.cpp
examples/lib/gl3w/: CMakeLists.txt  gl3w.vcxproj  gl3w.vcxproj.filters
examples/lib/glfw/: cmake_install.cmake  glfw.vcxproj  glfw.vcxproj.filters
examples/lib/imgui/: CMakeLists.txt  imgui.vcxproj  imgui.vcxproj.filters
examples/memory-allocation/: Main.cpp  TrackedPrinter.cpp  TrackedPrinter.h  UntrackedPrinter.cpp  UntrackedPrinter.h  memory-allocation.sln  memory-allocation.vcxproj  memory-allocation.vcxproj.filters
examples/memory-allocation-demo/: CMakeLists.txt  Main.cpp  TrackedPrinter.cpp  memory-allocation-demo.vcxproj
examples/memory-allocation-demo/include/memory-allocation-demo/: IUpdateable.h  TrackedPrinter.h  UntrackedPrinter.h
examples/memory-allocation-demo/src/: Main.cpp  TrackedPrinter.cpp  UntrackedPrinter.cpp
examples/runtime-require-demo/: BaseState.cpp  BaseState.h  CMakeLists.txt  Main.cpp  PrintHello.cpp  PrintHello.h  PrintVariant.cpp  PrintVariant.h  Printer.cpp  Printer.h  runtime-require-demo.vcxproj  runtime-require-demo.vcxproj.filters
examples/runtime-require-demo/include/runtime-require-demo/: BaseState.h  BaseStateUtil.h  PrintHello.h  PrintVariant.h  Printer.h
examples/runtime-require-demo/src/: BaseState.cpp  BaseStateUtil.cpp  Main.cpp  PrintHello.cpp  PrintVariant.cpp  Printer.cpp
examples/simple-demo/: CMakeLists.txt  Main.cpp  simple-demo.sln  simple-demo.vcxproj  simple-demo.vcxproj.filters
examples/simple-demo/include/: Allocator.h  Memory.h  Printer.h  Printer1.h  Printer2.h  Ref.h
examples/simple-demo/include/simple-demo/: Printer.h  SimpleDemoData.h
examples/simple-demo/src/: Allocator.cpp  Main.cpp  Memory.cpp  Printer.cpp  Printer.h  Printer1.cpp  Printer2.cpp
examples/simple-demo/src/喜び/: 喜び.cpp
include/: FileWatcher.h  Hotswapper.h  Log.h
src/: AllocationResolver.cpp  Allocator.cpp  CmdShell.cpp  CmdShell_unix.cpp  CmdShell_win32.cpp  Compiler.cpp  CompilerCmdLine_gcc.cpp  CompilerCmdLine_msvc.cpp  CompilerInitializeTask_gcc.cpp  CompilerInitializeTask_msvc.cpp  Compiler_clang.cpp  Compiler_gcc.cpp  Compiler_gcclike.cpp  Compiler_msvc.cpp  Compiler_unix.cpp  Compiler_win32.cpp  Config.cpp  Constructors.cpp  DependencyGraph.cpp  Feature.cpp  FeatureManager.cpp  FileParser.cpp  FileWatcher.cpp  FileWatcher_apple.cpp  FileWatcher_unix.cpp  FileWatcher_win32.cpp  FsPathHasher.cpp  Hotswapper.cpp  Hotswapper_disabled.cpp  Hotswapper_enabled.cpp  Log.cpp  ModuleManager.cpp  Platform.cpp  Preprocessor.cpp  ProtectedFunction.cpp  SharedModuleMemory.cpp  StringUtil.cpp  Util.cpp  VarManager.cpp  VarStore.cpp
test/common/: CMakeLists.txt
test/common/include/common/: Common.h  FileUtil.h  Macros.h  Typedefs.h  UpdateLoop.h  Util.h  ValidateDataStructures.h  Validation.h
test/common/src/: FileUtil.cpp  UpdateLoop.cpp  Util.cpp  Validation.cpp
test/integration-tests/: CMakeLists.txt  IntegrationTest.cpp  IntegrationTest.h  Main.cpp
test/integration-tests/integration-test-log/: CMakeLists.txt
test/integration-tests/integration-test-log/include/integration-test-log/: Log.h
test/integration-tests/simple-printer-test/: CMakeLists.txt
test/integration-tests/simple-printer-test/include/simple-printer-test/: GlobalData.h  Printer.h
test/integration-tests/simple-printer-test/src/: Main.cpp  Printer.cpp
test/unit-tests/: CMakeLists.txt  Test_CmdShell.cpp  Test_Compiler.cpp  Test_DependencyGraph.cpp  Test_FeatureManager.cpp  Test_FileParser.cpp  Test_FileWatcher.cpp  Test_Interpreter.cpp  Test_Lexer.cpp  Test_Parser.cpp  Test_Preprocessor.cpp  Test_SwapInfo.cpp  Test_VarStore.cpp
test/unit-tests/extensions/mem/: Test_MemoryManager.cpp
test/unit-tests/files/boost-source/: crc.hpp  future.hpp
test/unit-tests/files/clang-source/: Lexer.cpp
test/unit-tests/files/test-cmd-shell/cat-test/: CatFile.txt
test/unit-tests/files/test-compiler/simple-test/: Lib.cpp  Lib.h
test/unit-tests/files/test-file-parser/: SimpleFile.cpp  SkipCommentsAndStrings.cpp
test/unit-tests/files/test-file-watcher/simple-test/src/: Test.cpp
test/unit-tests/files/test-preprocessor/dependent-compilation-test/: Math.cpp  Math.h  Vector.cpp  Vector.h  VectorAndMathDependency.cpp  VectorMath.cpp  VectorMath.h  VectorMathDependency.cpp
test/unit-tests/files/test-preprocessor/infinite-recursion-test/: File-a.cpp  File-b.cpp  File-c.cpp
test/unit-tests/files/test-preprocessor/require-test/: Source1.cpp  Source2.cpp  Source3.cpp  lib.lib
(+121 files in other folders)
