cmake_minimum_required(VERSION 3.10.0)

project(hscpp-examples)

#add_subdirectory(lib)
#add_subdirectory(hscpp-example-utils)
#add_subdirectory(dependent-compilation-demo)
#add_subdirectory(imgui-demo)
#add_subdirectory(memory-allocation-demo)
#add_subdirectory(runtime-require-demo)
add_subdirectory(simple-demo)
